--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -364,63 +364,15 @@
                             </div>
                             <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
-                            <div id="medium-fxtrend" class="summ">1500$</div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/518906?agent=588607" target="_blank" class="trader">Jborn</a>
-                                <span id="medium-fxtrend-1">250$ (12.50%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/534457?agent=588607" target="_blank" class="trader">Hozyin</a>
-                                <span id="medium-fxtrend-3">300$ (15.00%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/520050?agent=588607" target="_blank" class="trader">votfx</a>
-                                <span id="medium-fxtrend-4">250$ (12.50%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/7031?agent=588607" target="_blank" class="trader">Sven</a>
-                                <span id="medium-fxtrend-6">200$ (10.00%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/11695?agent=588607" target="_blank" class="trader">Otmar</a>
-                                <span id="medium-fxtrend-7">500$ (25.00%)</span>
-                            </div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div id="medium-fxtrend" class="summ">—</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
-                            <div id="large-fxtrend" class="summ">3643$</div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/518906?agent=588607" target="_blank" class="trader">Jborn</a>
-                                <span id="large-fxtrend-1">554$ (11.07%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/523719?agent=588607" target="_blank" class="trader">Leventa</a>
-                                <span id="large-fxtrend-2">554$ (11.07%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/534457?agent=588607" target="_blank" class="trader">Hozyin</a>
-                                <span id="large-fxtrend-3">554$ (11.07%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/520050?agent=588607" target="_blank" class="trader">votfx</a>
-                                <span id="large-fxtrend-4">554$ (11.07%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/10253?agent=588607" target="_blank" class="trader">investobolin</a>
-                                <span id="large-fxtrend-5">554$ (11.07%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/7031?agent=588607" target="_blank" class="trader">Sven</a>
-                                <span id="large-fxtrend-6">250$ (5.00%)</span>
-                            </div>
-                            <div class="trader-summ">
-                                <a href="http://fx-trend.com/pamm/11695?agent=588607" target="_blank" class="trader">Otmar</a>
-                                <span id="large-fxtrend-7">625$ (12.50%)</span>
-                            </div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div id="large-fxtrend" class="summ">—</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
                     </tr>
                     <tr>
@@ -437,23 +389,15 @@
                             </div>
                             <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
-                            <div id="medium-mmcis" class="summ">500$</div>
-                            <div class="trader-summ">
-                                <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank" class="trader">Index top 20</a>
-                                <span id="medium-mmcis-1">500$ (25.00%)</span>
-                            </div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div id="medium-mmcis" class="summ">—</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
-                            <div id="large-mmcis" class="summ">554$</div>
-                            <div class="trader-summ">
-                                <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank" class="trader">Index top 20</a>
-                                <span id="large-mmcis-1">554$ (11.07%)</span>
-                            </div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div id="large-mmcis" class="summ">—</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
                     </tr>
                     <tr>
@@ -470,19 +414,15 @@
                             </div>
                             <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
                             <div id="medium-panteon" class="summ">—</div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
-                            <div id="large-panteon" class="summ">554$</div>
-                            <div class="trader-summ">
-                                <a href="http://panteon-finance.com/fundsTo/to2_119.html" target="_blank" class="trader">Stable 30</a>
-                                <span id="large-panteon-1">554$ (11.07%)</span>
-                            </div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div id="large-panteon" class="summ">—</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
                     </tr>
                     <tr>
@@ -499,19 +439,15 @@
                             </div>
                             <div class="trader-remark">% - доля инвестирования в инструмент</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
                             <div id="medium-forexinn" class="summ">—</div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
-                        <td class="blur">
+                        <td>
                             <div class="help-description">Рекомендуем инвестировать:</div>
-                            <div id="large-forexinn" class="summ">250$</div>
-                            <div class="trader-summ">
-                                <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank" class="trader">Накопительный</a>
-                                <span id="large-forexinn-1">250$ (5.00%)</span>
-                            </div>
-                            <div class="trader-remark">% - доля инвестирования в инструмент</div>
+                            <div id="large-forexinn" class="summ">—</div>
+                            <div class="trader-remark">Требуется регистрация</div>
                         </td>
                     </tr>
                 </tbody>
