--- a/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/Index.cshtml
@@ -9,18 +9,15 @@
 <link href="@Url.Content("~/Content/flexslider.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/dark.css")" rel="stylesheet" type="text/css" />
 <link href="@Url.Content("~/Content/themes/jquery-ui/jquery-ui-1.9.2.custom.css")" rel="stylesheet" />
-<script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-<script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/Main/calc.pamm.small.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/slider/modernizr.custom.28468.js")"></script>
+@*<script type="text/javascript" src="@Url.Content("~/Scripts/slider/modernizr.custom.28468.js")"></script>*@
 <script type="text/javascript" src="@Url.Content("~/Scripts/slider/jquery.cslider.js")"></script>
 <script type="text/javascript" src="@Url.Content("~/Scripts/Main/index.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/slider/coda-slider.1.1.1.pack.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/slider/jquery-easing-compatibility.1.2.pack.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/slider/jquery-easing.1.2.pack.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/jquery.flexslider-min.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/jquery.lwtCountdown-0.9.5.js")"></script>
-<script type="text/javascript" src="@Url.Content("~/Scripts/blur.min.js")"></script>
+@*<script type="text/javascript" src="@Url.Content("~/Scripts/slider/coda-slider.1.1.1.pack.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Scripts/slider/jquery-easing-compatibility.1.2.pack.js")"></script>
+        <script type="text/javascript" src="@Url.Content("~/Scripts/slider/jquery-easing.1.2.pack.js")"></script>
+        <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.flexslider-min.js")"></script>
+        <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.lwtCountdown-0.9.5.js")"></script>*@
 <meta property="fb:admins" content="100002476403510" />
 <meta property="fb:admins" content="100001451163492" />
 }
