--- a/new.broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Shared/_Layout.cshtml
@@ -10,17 +10,16 @@
     <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox-thumbs.css")">
     <link rel="stylesheet" href="@Url.Content("~/Content/themes/fancybox/jquery.fancybox.css")">
     <link rel="stylesheet" href="@Url.Content("~/Content/themes/jquery-ui/jquery-ui-1.9.2.custom.css")" />
-    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.8.20.min.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery-ui-1.8.20.min.js")"></script>
+    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
     <script type="text/javascript" src="@Url.Content("~/Scripts/Main/main.js")"></script>
+    <script src="@Url.Content("~/Scripts/vk_up_button/button.js")"></script>
     <!-- FancyBox -->
 	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox.js")"></script>
 	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-buttons.js")"></script>
 	<script src="@Url.Content("~/Scripts/fancybox/jquery.fancybox-thumbs.js")"></script>
     <script src="@Url.Content("~/Scripts/fancybox/jquery.easing-1.3.pack.js")"></script>
     <script src="@Url.Content("~/Scripts/fancybox/jquery.mousewheel-3.0.6.pack.js")"></script>
-    <script src="@Url.Content("~/Scripts/vk_up_button/button.js")"></script>
 
     @RenderSection("head", required:false)
 </head>
