--- a/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/BrokerInfo.cshtml
@@ -10,83 +10,68 @@
 </div>
 
 <div class="center-content broker-info">
-    <div class="broker">
-        <img src="@Url.Content("~/Content/img/broker-logo.png")"/>
-        <span class="button">
-            <a href="http://www.forexinn.ru/register/a/broccoli" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
-        </span>
-        <span>Партнерский код: <font>broccoli</font></span>
+    <div class="pamm-offer">
+        <table class="brokers-table">
+            <tbody>
+                <tr>
+                    <td class="broker-column">
+                        <img src="@Url.Content("~/Content/img/2_30.jpg")" />
+                        <a target="_blank" href="http://fx-trend.com/new/home?agent=588607">Открыть счет</a>
+                    </td>
+                    <td>
+                        <div class="help-description">Fx-trend:</div>
+                        <div class="trader-summ">
+                            <span id="small-fxtrend-1">
+                                Автоматический вывод прибыли в день заявки (не более 2000$ в неделю) 
+                                свыше 2000$ в неделю — вывод в течении 7 рабочих дней
+                            </span>
+                        </div>
+                        <div class="trader-remark">Регистрируйтесь и открывайте счета по нашим партнерским ссылкам</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="broker-column">
+                        <img src="@Url.Content("~/Content/img/mmcis-logo.png")" />
+                        <a target="_blank" href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253">Открыть счет</a>
+                    </td>
+                    <td>
+                        <div class="help-description">MMCIS:</div>
+                        <div id="small-mmcis" class="summ"></div>
+                        <div class="trader-summ">
+                            <span id="small-mmcis-1">Вывод средств в течении 7 рабочих дней</span>
+                        </div>
+                        <div class="trader-remark">Регистрируйтесь и открывайте счета по нашим партнерским ссылкам</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="broker-column">
+                        <img src="@Url.Content("~/Content/img/panteon_logo.jpg")" />
+                        <a target="_blank" href="http://panteon-finance.com/newMember/7138.html">Открыть счет</a>
+                    </td>
+                    <td>
+                        <div class="help-description">Panteon Finance:</div>
+                        <div id="small-panteon" class="summ"></div>
+                        <div class="trader-summ">
+                            <span id="small-panteon-1">Вывод средств в течении 6 рабочих дней</span>
+                        </div>
+                        <div class="trader-remark">Регистрируйтесь и открывайте счета по нашим партнерским ссылкам</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="broker-column">
+                        <img src="@Url.Content("~/Content/img/broker-logo.png")" />
+                        <a target="_blank" href="http://www.forexinn.ru/register/a/broccoli">Открыть счет</a>
+                    </td>
+                    <td>
+                        <div class="help-description">ForexInn:</div>
+                        <div id="small-forexinn" class="summ"></div>
+                        <div class="trader-summ">
+                            <span id="small-forexinn-1">В среднем вывод средств в день заявки</span>
+                        </div>
+                        <div class="trader-remark">Регистрируйтесь и открывайте счета по нашим партнерским ссылкам</div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <div class="about-broker-container">
-        <h4>Брокер ForexInn:</h4>
-        <ul class="about-broker">
-            <li>1. Пополнение и снятие наличными в офисах.</li>
-            <li>2. Нет внутренних курсов, конвертация по курсу ЦБ.</li>
-            <li>3. Комиссия на пополнение/снятие — 0%</li>
-            <li>4. Вывод средств со счета за 15 минут.</li>
-            <li>5. Узкий плавающий спред.</li>
-            <li>6. Рыночное исполнение ордеров.</li>
-            <li>7. Они рады скальперам и торговым советникам.</li>
-            <li>8. Профессиональная круглосуточная техническая поддержка в торговый период.</li>
-        </ul>
-        <img src="@Url.Content("~/Content/img/depositphotos_1950636-Various-vegetables-isolated.png")"/>
-    </div>
-    <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
-        <div class="broker" style="margin-top: 100px;">
-            <img src="@Url.Content("~/Content/img/2_30.jpg")" style="margin-left: 125px; margin-top: 23px; width: 235px;" />
-            <span class="button">
-                <a href="http://fx-trend.com/new/home?agent=588607" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
-            </span>
-            <span>Партнерский код: <font>broccoli</font></span>
-        </div>
-        <div class="about-broker-container">
-            <h4>Брокер Forex Trend:</h4>
-            <p class="broker-description about-broker">
-                Компания Forex Trend зарегистрирована в Новой Зеландии, FSPномер FSP268005<br />
-                Компания имеет право вести деятельность в сфере торговли на биржевых и внебиржевых рынках, инвестиций, управления средствами, ценными бумагами и инвестиционными портфелями.<br />
-                Данную информацию можно проверить на сайте <a href="http://www.business.govt.nz/fsp/app/ui/fsp/version/searchSummaryCompanyFSP/FSP268005/1.do" target="_blank">регулятора</a>.<br />
-            </p>
-            <img src="@Url.Content("~/Content/img/7410.png")" />
-        </div>
-    </div>
-    <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
-        <div class="broker" style="margin-top: 100px;">
-            <img src="@Url.Content("~/Content/img/mmcis-logo.png")" style="margin-left: 125px; margin-top: 23px; width: 235px;" />
-            <span class="button">
-                <a href="https://ru.forex-mmcis.com/index_top_promo.html?ref=118253" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
-            </span>
-        </div>
-        <div class="about-broker-container">
-            <h4>Брокер MMCIS - преимущества:</h4>
-            <ul class="about-broker">
-                <li>1. Гарантии надежности европейского банка.</li>
-                <li>2. Минимальный депозит всего лишь 100$.</li>
-                <li>3. Отсутствие комиссии на СВОП.</li>
-                <li>4. Кредитное плечо от 1:50 до 1:500.</li>
-                <li>5. Выход на межбанковский рынок.</li>
-                <li>6. Спрэд - от 1 пункта без проскальзывания.</li>
-                <li>7. Бонус 50% на первый депозит до 1 000$.</li>
-                <li>8. Готовые торговые стратегии.</li>
-            </ul>
-            <img src="@Url.Content("~/Content/img/depositphotos_5453471-Fruit-and-vegetable-alphabet.png")" style="right: 70px; top: 25px; width: 230px;" />
-        </div>
-    </div>
-    <div class="hr-shadow" style="margin-top: 100px; margin-bottom: 100px;">
-        <div class="broker" style="margin-top: 100px;">
-            <img src="@Url.Content("~/Content/img/panteon_logo.jpg")" style="margin-left: 120px; margin-top: 15px; width: 235px;" />
-            <span class="button">
-                <a href="http://panteon-finance.com/newMember/7138.html" target="_blank"><input class="large" type="button" value="Открыть счет у Брокера" /></a>
-            </span>
-        </div>
-        <div class="about-broker-container">
-            <h4>Брокер Пантеон Финанс:</h4>
-            <p class="broker-description about-broker">
-                Брокерская компания «Пантеон Финанс» специализируется на предоставлении услуг в сфере интернет-трейдинга и инвестиций.<br />
-                «Пантеон Финанс» дает своим клиентам возможность получать доходы, намного превышающие даже самые смелые банковские предложения по депозитам. Предлагает невероятно удобную и простую систему управления своими инвестициями. При этом, широкий выбор профессиональных управляющих и различных стратегий, позволяет инвесторам подбирать для себя самые комфортные способы получения прибыли.
-            </p>
-            <img src="@Url.Content("~/Content/img/depositphotos_1374386-A-vegetarian-construction-isolated.jpg")" style="width: 210px;top: 10px;right: 100px;" />
-        </div>
-    </div>
-    <br/>
-    <br/>
 </div>
