--- a/new.broccoli/BroccoliMvc/Views/Home/ContactUs.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/ContactUs.cshtml
@@ -54,8 +54,18 @@
                 </div>
             }
         </div>
-        <div class="contact-description">
-            
+        <div class="contact-data">
+            <h3>Контакты:</h3>
+            <table>
+                <tr>
+                    <td>Skype:</td>
+                    <td>penguin-soft.biz</td>
+                </tr>
+                <tr>
+                    <td>Телефон:</td>
+                    <td>+79618892226</td>
+                </tr>
+            </table>
         </div>
     </div>
 </div>
