--- a/new.broccoli/BroccoliMvc/Content/Site.css
+++ b/new.broccoli/BroccoliMvc/Content/Site.css
@@ -2749,6 +2749,29 @@ footer#main{
     padding: 30px;
 }
 
+.contact-data {
+    width: 400px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.contact-data table {
+    margin-top: 20px;
+}
+
+.contact-data table td {
+    color: rgb(77, 77, 77);
+    font-size: 15px;
+    padding: 5px;
+    padding-left: 0;
+}
+
+.contact-form {
+    width: 400px;
+    display: inline-block;
+    vertical-align: top;
+}
+
 .contact-form .row {
     margin-top: 5px;
 }
@@ -3101,4 +3124,128 @@ footer#main{
     top: 0px;
     right: 5px;
     width: 300px;
+}
+
+.brokers-table {
+    width: 100%;
+    position: relative;
+}
+
+.brokers-table thead td {
+    text-align: center;
+    padding: 8px;
+}
+
+.brokers-table thead td .name {
+    font-family: 'Open Sans',Arial,Helvetica,sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color: #363D47;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.brokers-table thead td .description {
+    font-size: 14px;
+    color: #363D47;
+    margin-top: 3px;    
+    margin-bottom: 20px;
+}
+
+.brokers-table thead td .help-description {
+    font-size: 12px;
+    color: #363D47;
+}
+
+.brokers-table thead td .ui-spinner {
+    width: 120px;
+    display: block;
+    margin: 5px auto;
+}
+
+.brokers-table tbody td {
+    height: 60px;
+    padding: 10px;
+    background-color: #F4F5F7;
+    border: 2px solid white;
+    text-align:center;
+    /*border-left: 15px solid white;
+    border-right: 15px solid white;*/
+    vertical-align: top;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+.brokers-table tbody td .summ {
+    text-align: center;
+    font-size: 18px;
+}
+
+.brokers-table tbody td .trader-summ {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 12px;
+}
+
+.brokers-table tbody td .trader-summ span {
+    line-height: 1.4;
+    color: rgb(71, 71, 71);
+}
+
+.brokers-table tbody td .trader-remark {
+    margin-top: 10px;
+    font-size: 11px;
+    color: rgb(134, 134, 134);
+}
+
+.brokers-table tbody td .summ .percent {
+    color: rgb(151, 151, 151);
+}
+
+.brokers-table tbody td .help-description {
+    font-size: 12px;
+    color: #363D47;
+    text-align:center;
+    margin-bottom: 5px;
+}
+
+.brokers-table tbody td .description {
+    font-size: 12px;
+    color: #363D47;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.brokers-table tr:hover td {
+    background-color: rgb(255, 245, 229);
+}
+
+.brokers-table td {
+    /*border: 1px dashed black;*/
+    width: 25%;
+}
+
+.brokers-table tr td.broker-column {
+    width: 20%;
+    background-color: #FFFFFF;
+    border: none;
+    padding: 10px;
+    vertical-align: middle;
+}
+
+.brokers-table tr td.broker-column img {
+    width: 135px;
+    margin: 10px auto;
+    display: block;
+}
+
+.brokers-table tr td.broker-column a {
+    text-align: center;
+    width: 100%;
+    display: block;
+}
+
+.brokers-table .money {
+    border: none;
+    width: 160px;
 }
