--- a/new.broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Shared/MainMenu.cshtml
@@ -1,5 +1,6 @@
 ﻿<div class="main-menu">
     <div class="menu">
+        <div><a href="@Url.Action("Coaching", "Home")">Персональный коучинг</a></div>
         <div><a href="@Url.Action("BroccoliOffer", "Home")">Калькулятор Брокколи</a></div>
         <div><a href="@Url.Action("BrokerInfo", "Home")">Брокеры</a></div>
         <div class="last"><a href="@Url.Action("ContactUs", "Home")">Свяжитесь с нами</a></div>
