--- a/new.broccoli/BroccoliMvc/Views/Home/ContactUs.cshtml
+++ b/new.broccoli/BroccoliMvc/Views/Home/ContactUs.cshtml
@@ -63,7 +63,11 @@
                 </tr>
                 <tr>
                     <td>Телефон:</td>
-                    <td>+79618892226</td>
+                    <td>+7 (961) 889-22-26</td>
+                </tr>
+                <tr>
+                    <td>Вконтакте:</td>
+                    <td><a href="https://vk.com/broccolitrade" target="_blank">vk.com/broccolitrade</a></td>
                 </tr>
             </table>
         </div>
